--- a/thisable/public/manifest.json
+++ b/thisable/public/manifest.json
@@ -1,6 +1,6 @@
 {
-  "short_name": "React App",
-  "name": "Create React App Sample",
+  "short_name": "thisABLE",
+  "name": "thisABLE",
   "icons": [
     {
       "src": "favicon.ico",
@@ -13,13 +13,18 @@
       "sizes": "192x192"
     },
     {
+      "src": "logo256.png",
+      "type": "image/png",
+      "sizes": "256x256"
+    },
+    {
       "src": "logo512.png",
       "type": "image/png",
       "sizes": "512x512"
     }
   ],
-  "start_url": ".",
+  "start_url": "/",
   "display": "standalone",
-  "theme_color": "#000000",
+  "theme_color": "#ED786A",
   "background_color": "#ffffff"
 }
