--- a/thisable/package.json
+++ b/thisable/package.json
@@ -10,16 +10,16 @@
     "@testing-library/user-event": "^13.5.0",
     "antd": "^3.26.5",
     "axios": "^0.26.1",
-    "prop-types": "^15.7.2",
     "bootstrap": "^5.1.3",
     "dotenv": "^16.0.0",
     "geolocation": "^0.2.0",
     "package.json": "^2.0.1",
+    "prop-types": "^15.7.2",
     "react": "^17.0.2",
     "react-bootstrap": "^2.1.2",
     "react-dom": "^17.0.2",
-    "react-redux": "^7.1.3",
     "react-geolocated": "^3.2.0",
+    "react-redux": "^7.1.3",
     "react-router-dom": "^6.2.2",
     "react-scripts": "5.0.0",
     "react-simple-star-rating": "^4.0.5",
@@ -56,5 +56,9 @@
   },
   "devDependencies": {
     "http-proxy-middleware": "^0.19.1"
-  }
+  },
+  "main": "index.js",
+  "author": "",
+  "license": "ISC",
+  "description": ""
 }
