--- a/thisable/public/manifest.json
+++ b/thisable/public/manifest.json
@@ -8,17 +8,18 @@
       "type": "image/x-icon"
     },
     {
-      "src": "logo192.png",
+      "src": "icon192.png",
       "type": "image/png",
-      "sizes": "192x192"
+      "sizes": "192x192",
+      "purpose": "any maskable"
     },
     {
-      "src": "logo256.png",
+      "src": "icon256.png",
       "type": "image/png",
       "sizes": "256x256"
     },
     {
-      "src": "logo512.png",
+      "src": "icon512.png",
       "type": "image/png",
       "sizes": "512x512"
     }
